--- a/2.html
+++ b/2.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documen6</title>
+  <title>Document</title>
 </head>
 <body>
-  <div>helloworld!</div>
+  <div>helloworld!!</div>
 </body>
 </html>
